# joy

./: CMakeLists.txt  README.md
include/: joy.h  speak.h
src/: CMakeLists.txt  joy.cpp
test/: CMakeLists.txt  test.cpp
